Implemented event recurrence generation